# Nexora

./: .env.example  .env.pulse.example  .gitattributes  .gitignore  ADMIN_GUIDE.md  ADMIN_GUIDE_3.2.0.md  BRANCHES.md  BRANCH_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAIN_CI_FAILURE_3.2.1.txt  PAGES_TRIGGER_NOTE.tmp  PERFORMANCE_DIAGNOSTIC.txt  POST_RELEASE_STATUS_3.2.1.json  POST_RELEASE_STATUS_3.2.1_FINAL.json  PROJECTS.md  PROJECT_INDEX.md  README.md  RELEASE_HISTORY.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_3.0.0.md  RELEASE_NOTES_3.1.0.md  RELEASE_NOTES_3.1.2.md  RELEASE_NOTES_3.2.0.md  RELEASE_NOTES_3.2.1.md  RELEASE_NOTES_3.2.2.md  RELEASE_NOTES_3.2.3.md  RELEASE_NOTES_3.2.4.md  RELEASE_NOTES_3.2.5.md  RELEASE_NOTES_3.3.0.md  RELEASE_NOTES_3.3.1.md  RELEASE_NOTES_3.3.2.md  RELEASE_NOTES_3.3.3.md  RELEASE_NOTES_3.3.4.md  RELEASE_NOTES_3.4.0.md  RELEASE_NOTES_3.5.0.md  RELEASE_PUBLICATION_3.2.2.json  (+31 more)
.diagnostics/: exact-3.1.2-failure.txt  trust-core-rust.txt
.github/: CODEOWNERS  pull_request_template.md
.release-verification/: v3.1.0.json
advanced-website/: .gitignore  .nexora-advanced-docs-build  README.md  index.html  package.json  vite.config.mjs
android/: README.md  settings.gradle.kts
client/: index.html  vite.config.mjs
cloud/: billing-account-ledger.cjs  billing-catalog.cjs  billing-common.cjs  billing-core.cjs  billing-goals.cjs  billing-management-routes.cjs  billing-subscriptions.cjs  cli.cjs  create-cloud-server-v11.cjs  create-cloud-server-v12.cjs  create-cloud-server.cjs  entitlements.cjs  identity-routes.cjs  (+7 more)
native/: Cargo.toml
native/nexora-trust-core/: Cargo.toml
native/nexora-trust-core/src/: lib.rs
(+543 files in other folders)
