[workspace]
members = ["nexora-trust-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.87"

[workspace.dependencies]
base64 = "0.22.1"
getrandom = { version = "0.2.16", features = ["js"] }
js-sys = "0.3.77"
openmls = { version = "0.8.1", features = ["js"] }
openmls_basic_credential = "0.5.0"
openmls_memory_storage = { version = "0.5.0", features = ["test-utils"] }
openmls_rust_crypto = { version = "0.5.1", features = ["test-utils"] }
openmls_traits = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tls_codec = { version = "0.4.2", features = ["derive", "serde", "mls"] }
wasm-bindgen = "0.2.100"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
