[package]
name = "nexora-trust-core"
version = "3.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nexora MLS 1.0 Trust Core for native and WebAssembly clients"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
getrandom.workspace = true
js-sys.workspace = true
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_memory_storage.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tls_codec.workspace = true
wasm-bindgen.workspace = true
zeroize.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
